# shopping-sns-auto-operation

./: .env.example  .gitignore  CLAUDE.md  README.md
backend/: alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 8a50e09df26a_init_tables.py  8f04441daac6_add_operation_logs_table.py
backend/app/: main.py
backend/app/agents/: evaluator.py  export.py  generator.py  importer.py  learning.py  research.py  selection.py
backend/app/api/: analytics.py  candidates.py  contents.py  costs.py  export.py  generation.py  imports.py  jobs.py  pipelines.py  products.py  prompts.py
backend/app/clients/: llm.py  rakuten_api.py
backend/app/core/: config.py  db.py  logging.py  operation_log.py
backend/app/harness/: cost_guard.py  generation.py  job_queue.py  pipeline.py
backend/app/models/: __init__.py  candidate.py  content.py  import_error.py  job.py  llm_usage.py  operation_log.py  product.py  prompt_version.py  result.py
backend/app/schemas/: affiliate_import.py  analytics.py  candidate.py  common.py  content.py  cost.py  export.py  job.py  learning.py  product.py  prompt.py
backend/config/: ng_words.yaml  scoring.yaml  seasonality.yaml  strategy.yaml
backend/prompts/evaluator/: eval-v1.txt
backend/prompts/generator/: gen-v1.txt
backend/prompts/learning/: learning-v1.txt
backend/scripts/: seed_prompts.py
backend/tests/: conftest.py  test_api_analytics.py  test_api_candidates.py  test_api_contents.py  test_api_costs.py  test_api_export.py  test_api_generation.py  test_api_imports.py  test_api_products.py  test_api_prompts.py  test_cost_guard.py  test_evaluator.py  test_export.py  test_generator.py  test_importer.py  test_job_queue.py  test_learning.py  test_llm_client.py  test_models.py  test_operation_log.py  test_pipeline.py  test_pipeline_notify.py  test_rakuten_api.py  test_research.py  test_seed_prompts.py  test_selection.py  test_weekly_pipeline.py
docs/: 01_要件定義.md  02_基本設計.md  03_詳細設計.md  PROGRESS.md  (+1 more)
(+13 files in other folders)
